--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-hello.core.web' // 웹 라이브러리 추가
 	implementation 'javax.inject:javax.inject:1'
 	implementation 'org.projectlombok:lombok:1.18.16'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
